# engraven

./: .gitignore  BOOTSTRAP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
assets/: gen-context-window.mjs  gen-graph.mjs  gen-research.mjs
docs/: HARNESSES.md  KB-GUIDE.md  MAINTENANCE.md  SPEC.md  engram.config.schema.json  engraven.config.schema.json  hyphasma.config.schema.json
scripts/: validate-memory.sh  vault-check.mjs
skills/bootstrap/: SKILL.md
skills/doctor/: SKILL.md
src/: config.rs  counts.rs  main.rs  memory.rs  util.rs  vault.rs
template/: AGENTS-SECTION.md  CLAUDE-SECTION.md  MEMORY.template.md  engram.config.json  engraven.config.json  hyphasma.config.json
template/.claude/rules/: memory.md  vault.md
template/.github/workflows/: engram-ci.yml  engraven-ci.yml  hyphasma-ci.yml
template/vault/: 00-Index.md  Research Library.md
tests/: memory_cli.rs  vault_cli.rs
tests/common/: mod.rs
tests/expected/: memory-bad.txt  memory-bad2.txt  memory-budget.txt  memory-empty.txt  memory-good.txt  memory-selftest-defaults.txt  memory-selftest-project.txt  memory-skip.txt  vault-bad-allow-placeholders.txt  vault-bad.txt  vault-clean.txt  vault-fix-00-Index-fixed.md  vault-fix-1.txt  vault-fix-2.txt  vault-fix-3.txt  vault-fix-NOTES-fixed.md
tests/fixtures/memory-project/: engraven.config.json  (+1 more)
(+65 files in other folders)
