[package]
name = "hyphasma"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Linters for the Hyphasma memory system: vault integrity (hyphasma vault) and router/topic-file health (hyphasma memory)."
repository = "https://github.com/geektechniquestudios/hyphasma"
keywords = ["lint", "memory", "vault", "knowledge-base", "obsidian"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
regex = "1"
serde_json = "1"

[profile.release]
lto = "thin"
strip = "symbols"
